--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,29 @@
-h1{
-    text-align: center;
-    padding: 10px;
+h1 {
+  text-align: center;
+  padding: 10px;
+  padding-top: 20px;
+  background: #d2def2;
+  height: 100px;
+  width: 80%;
+  margin-left: 10%;
+  border-radius: 20px;
+}
+h2 {
+  text-align: center;
+  padding: 10px;
+}
+#quiz {
+  margin-left: 40%;
+  margin-right: 40%;
+  background: #d2def2;
+  padding: 10px 20px 10px 20px;
+  width: 400px;
+  border-radius: 20px;
+}
+input {
+  margin-bottom: 20px;
+  display: block;
+}
+body {
+  background-image: url("https://images3.alphacoders.com/486/thumb-1920-48689.jpg");
 }
