--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@ h2 {
   text-align: center;
   padding: 10px;
 }
+h3 {
+  padding-top: 100px;
+}
 #quiz {
   margin-left: 40%;
   margin-right: 40%;
@@ -29,11 +32,53 @@ body {
   /* background-repeat-x: no-repeat;
   background-size: contain; */
 }
-#finish-game{
+#finish-game {
   text-align: center;
 }
-.start-game{
+.start-game {
   text-align: center;
-  height: 200px;
-  width: 300px;
+  height: 600px;
+  width: 800px;
+  background-color: #d2def2;
+  margin-left: 30%;
+  margin-top: 10%;
+  margin-right: 30%;
+  border-radius: 20px;
+}
+.end-game {
+  text-align: center;
+  height: 600px;
+  width: 800px;
+  background-color: #d2def2;
+  margin-left: 30%;
+  margin-top: 10%;
+  margin-right: 30%;
+  border-radius: 20px;
+}
+.start-button {
+  text-align: center;
+  height: 60px;
+  width: 80px;
+  margin: 100px;
+}
+.end-button {
+  text-align: center;
+  height: 60px;
+  width: 80px;
+  margin: 140px;
+}
+
+.questions {
+  font-weight: bold;
+}
+.carl {
+  position: fixed;
+  top: 200px;
+  left: 80px;
+}
+.athf {
+  position: fixed;
+  top: 20px;
+  right: 800px;
+  width: 50px;
 }
