--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
   text-align: center;
   height: 60px;
   width: 80px;
-  margin: 100px;
+  margin: 80px auto;
 }
 .end-button {
   text-align: center;
